<resources>
    <string name="app_name">ChatApplication</string>
    <string name="email">User Id</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset password</string>
    <string name="Ent_Email">Enter Email</string>
    <string name="Ent_Password">Enter Password</string>
    <string name="create">Create Account!!!</string>
    <string name="registration">Registration</string>
    <string name="conpassword">Confirm Password</string>
    <string name="pass_not_match">Password not Match</string>
    <string name="Auntication">Authentication Failed</string>
    <string name="minimum_password">Enter Atleast 8 digit</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="name">Name</string>
    <string name="action_settings">Settings</string>
    <string name="single_permission_text">(Click on FAB to check Single permission.\nTo test again, change the app permission in settings or reinstall the app)</string>
    <string name="emailID">Email ID</string>
    <string name="back">back</string>
    <string name="update">Update</string>
    <string name="Password">Password</string>
    <string name="Groupname">Enter Group Name</string>
    <string name="confirm">Confirm</string>
    <string name="group_created_Unsuccessful">group Created Unsuccessful</string>
    <string name="group_created">group Created Successful</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
