<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="5dp"
    tools:context=".RegistrationActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_person_black_24dp"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ImageSend"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="121dp"
        android:layout_marginTop="168dp"
        android:src="@drawable/ic_camera_alt_black_24dp"
        app:civ_circle_background_color="@android:color/white" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextInputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ImageSend"
        android:hint="@string/name"
        android:textColor="@android:color/black">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etNameID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/login"
            android:maxLength="30"
            android:maxLines="1"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextInputEmailID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextInputName"
        android:hint="@string/emailID"
        android:textColor="@android:color/black">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etEmailID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/login"
            android:maxLength="30"
            android:maxLines="1"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextInputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextInputEmailID"
        android:hint="@string/password"
        android:textColor="@android:color/black">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/password"
            android:inputType="textWebPassword"
            android:maxLength="15"
            android:maxLines="1"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextInputConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextInputPassword"
        android:hint="@string/conpassword"
        android:textColor="@android:color/black">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/password"
            android:inputType="textWebPassword"
            android:maxLength="15"
            android:maxLines="1"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextInputConfirmPassword"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button"
        android:text="@string/registration"
        android:textColor="@android:color/white" />

</RelativeLayout>